--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "vue": "^3.2.13",
